--- a/Delegation_Before_Quality/DelegationInstructions.html
+++ b/Delegation_Before_Quality/DelegationInstructions.html
@@ -9,13 +9,11 @@ Instructions: Delegation
 <div class="card bg-light">
     <div class="card-body">
 
-You can now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. 
-If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
-<b> You will need to take the decision even if you decide to delegate, but it would be inconsequential </b>
+You now <u>will decide whether or not</u> to delegate <u>the next task</u> to a previous investor. Either way, you must choose an asset as in previous tasks. If you decide to delegate, then you will pick a particular previous investor and the computer will automatically choose for you exactly the same asset as that investor chose for that task, ignoring your own choice of asset. On the other hand, if you decide not to delegate, then for that task the computer will just use your own choice of asset. 
 
 <br><br>
 
-As usual, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: the final payments they received, their risk ratings and their quality ratings.
+Your screen will display the usual information about available assets. It will also display a list of five investors who have previously played this game, in case you decide to delegate to one of those investors. For each of those five investors, the display shows the final payments they received, their risk ratings and their quality ratings.
 
 <br><br>
 
