--- a/consent_form/ConsentForm.html
+++ b/consent_form/ConsentForm.html
@@ -22,7 +22,7 @@ Your participation in this study is purely voluntary, and you may withdraw your 
 <br>
 <br>
 
-If you have any concerns about any aspect of the study or you have a complaint, in the first instance please contact the principal investigator of the project, Professor Simon Weidenholzer, (<a href="mailto:sweide@essex.ac.uk">sweide@essex.ac.uk</a>). If you are still concerned, you think your complaint has not been addressed to your satisfaction or you feel that you cannot approach the principal investigator, please contact the Director of Research in Economics at the University of Essex, Dr. Abhimanyu Gupta (<a href="mailto:a.gupta@essex.ac.uk">a.gupta@essex.ac.uk</a>), or the University of Essex’s Research Governance and Planning Manager, Sarah Manning-Press (<a href="mailto:sarahm@essex.ac.uk">sarahm@essex.ac.uk</a>). Please include in your query the ERAMS reference number: <b>ETH2122-0711</b>.
+If you have any concerns about any aspect of the study or you have a complaint, in the first instance please contact the principal investigator of the project, Professor Simon Weidenholzer, (<a href="mailto:sweide@essex.ac.uk">sweide@essex.ac.uk</a>). If you are still concerned, you think your complaint has not been addressed to your satisfaction or you feel that you cannot approach the principal investigator, please contact the Director of Research in Economics at the University of Essex, Dr. Xiaoyu Xia (<a href="mailto:xiaoyu.xia@essex.ac.uk">xiaoyu.xia@essex.ac.uk</a>), or the University of Essex Data Protection Officer (<a href="mailto:dataprotectionofficer@essex.ac.uk">dataprotectionofficer@essex.ac.uk</a>). Please include in your query the ERAMS reference number: <b>ETH2122-0711</b>.
 
 <br>
 <br>
