fixing the instructions

--- a/Delegation_After_Quality/ComplexDelegation.html
+++ b/Delegation_After_Quality/ComplexDelegation.html
@@ -121,11 +121,11 @@
         <div class="card-body" >
                 <font size="4">
 
-You can now choose to either delegate the task you just completed to a previous investor. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
+You now <u>will decide whether or not</u> to delegate <u>the task you just completed</u> to a previous investor. If you decide to delegate, then you will pick a particular previous investor and the computer will automatically choose for you exactly the same asset as that investor chose for that task. If you decide not to delegate, then for that task the computer will just use the asset you already chose. 
 
 <br><br>
 
-As usual, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: the final payments they received, their risk ratings and their quality ratings.
+Your screen will display the usual information about available assets, in case you decide not to delegate. It will also display a list of five investors who have previously played this game, in case you decide to delegate to one of those investors. For each of those five investors, the display shows the final payments they received, their risk ratings and their quality ratings.
 
 <br><br>
 
@@ -142,7 +142,7 @@ As usual, your screen will display information you will need if you decide to ma
 <br>
 
 <img src="{{ static 'pictures/delegation_decision_no_info.png' }}" class="center"/>
- 
+  
         </div>
     </div>
 </div>
