changing the instructions (pending approval)

--- a/Delegation_After_Quality/DelegationInstructions.html
+++ b/Delegation_After_Quality/DelegationInstructions.html
@@ -13,6 +13,12 @@ You now <u>will decide whether or not</u> to delegate <u>the task you just compl
 
 <br><br>
 
+There is a delegation fee. If <u>you choose to delegate, then {{token_delegation_costs}} tokens ({{C.DELEGATION_COSTS}}) will be subtracted from your variable payment</u> if this block is chosen for payment.
+
+
+<br><br>
+
+
 Your screen will display the usual information about available assets, in case you decide not to delegate. It will also display a list of five investors who have previously played this game, in case you decide to delegate to one of those investors. For each of those five investors, the display shows the final payments they received, their risk ratings and their quality ratings.
 
 <br><br>
